# cadence_server

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile
.circleci/: config.yml
migrations/: 20210802005042_create_workspaces.sql  20210802005343_create_tasks.sql  20210811014914_create_users.sql  20210811014920_create_boards.sql  20210811014925_create_lists.sql  20210811014935_create_tickets.sql  20210812022432_create_users.down.sql  20210812022432_create_users.up.sql  20210812024228_create_boards.down.sql  20210812024228_create_boards.up.sql  20210812024638_create_lists.down.sql  20210812024638_create_lists.up.sql  20210812025017_create_tickets.down.sql  20210812025017_create_tickets.up.sql
src/: logger.rs  main.rs  models.rs
