[package]
name = "timesync_server"
version = "0.1.0"
authors = ["Peter Donovan <peter@darkfusion.io>"]
edition = "2018"
license = "MIT"
description = "API Server for TimeSync, a time management tool that helps track your daily tasks, goals and deadlines."
repository = "https://github.com/peter-donovan/timesync_server"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15"
fern = "0.6"
log = "0.4"
