[package]
name = "cadence_server"
version = "0.1.0"
authors = ["Peter Donovan <peter@darkfusion.io>"]
edition = "2018"
license = "MIT"
description = "API Server for Cadence, a time management tool that helps track your daily tasks, goals and deadlines."
repository = "https://github.com/peter-donovan/cadence_server"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-http = "3.0.0-beta.8"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["chrono", "postgres", "runtime-actix-rustls", "uuid"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
